css/showMeStyles.css
/*sticky footer code (given 16px top and 16px bottom margin with footer height */
#wrapper {
	min-height: calc(100vh - 80px);
} 
footer {
	height: 20px;	
} 

a {
	text-decoration: none;
}
#setW1 {
	width: 25%;
}
#setW2 {
	width: 25%;
}
#setW3 {
	width: 25%;
}
#setW4 {
	width: 25%;
}
/* Instead of using specificity to override the cascade of w3.css stylesheet,
I could also use the !important declaration. Just adding a class that sets width
for these elements doesn't override w3.css stylesheet
.modify {
	width: 25% !important;
}*/
.actionWhy {
	font-style: italic;
	text-decoration: underline;
}
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  font-size: 10px;
}
::-moz-placeholder { /* Firefox 19+ */
  font-size: 10px;
}
:-ms-input-placeholder { /* IE 10+ */
  font-size: 10px;
}
:-moz-placeholder { /* Firefox 18- */
  font-size: 10px;
}
#insertLink {
	width: 50%;
}
#whyVote {
	display: block;
}
.error {
	color: red;
	font-style: italic;
}
.smallPrint {
	font-style: italic;
	font-size: 14px;
}
.hidden {
	display: none;
}
.shown {
	display: block;
}
.formHeading {
	font-weight: bold;
	font-size: 30px;
}
textarea {
	display: block;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;	
	width: 50%;
	height: 80px;
}

